[gd_scene load_steps=6 format=3 uid="uid://cetg57e3xjhgt"]

[ext_resource type="Texture2D" uid="uid://eeq1twdho8t0" path="res://assets/Jugador/Flecha.png" id="1_8iabs"]
[ext_resource type="Script" uid="uid://cd3ec2fcslcke" path="res://Codigo/Jugadores/flecha_2.gd" id="1_hne7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hne7v"]
size = Vector2(19, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_e2t8m"]
radius = 48.002605

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2t8m"]
size = Vector2(20, 3)

[node name="Flecha_2" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_hne7v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_8iabs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -1.5)
shape = SubResource("RectangleShape2D_hne7v")

[node name="area_da単o" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_da単o"]
position = Vector2(2, -1.5)
shape = SubResource("CircleShape2D_e2t8m")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, -1.5)
shape = SubResource("RectangleShape2D_e2t8m")

[connection signal="body_entered" from="area_da単o" to="." method="_on_zona_da単o_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
